<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Democracy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="ok">OK</string>
    
	<string name="logout">Logout</string>
	
    <string name="default_content">Default Image</string>
    
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="new_comment_hint">Novo comentário</string>
    
    <string name="login">Login</string>
    
    <string name="available_questions">Perguntas disponíveis</string>
    <string name="answer_hint">Resposta</string>
    
    <string name="no_discursive_answers">Você ainda não respondeu a esta pergunta.</string>
    
    <string name="comments">Comentários</string>
    <string name="no_comments">Esta pergunta ainda não possui comentários.</string>
    
    <string name="but_cancel">Cancelar</string>
    <string name="but_comment">Comentar</string>
    
    <string name="but_answer">Responder</string>
    
    <string name="but_partial_result">Resultado parcial</string>
    <string name="partial_results">Total de respostas:</string>
</resources>
