<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/questionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/toptext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:paddingBottom="10dp"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="#3395D0"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/partial_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/default_content"
                android:padding="2dp"
                android:src="@drawable/ic_action_sort_by_size" />

            <ImageButton
                android:id="@+id/comments_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:contentDescription="@string/default_content"
                android:padding="2dp"
                android:src="@drawable/ic_action_chat" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/userDiscursiveAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:singleLine="false" 
        android:scrollHorizontally="false" />
        
    <EditText
        android:id="@+id/userDiscursiveAnswerEdit"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/answer_hint"
        android:singleLine="false" />
    
    <Button
        android:id="@+id/answer_but"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.70"
        android:text="@string/but_answer" />

</LinearLayout>